--- a/app/src/main/res/layout/newsdescription.xml
+++ b/app/src/main/res/layout/newsdescription.xml
@@ -50,6 +50,7 @@
                     android:layout_marginTop="25dp"
                     android:textStyle="bold"
                     android:textSize="30sp"
+                    android:paddingBottom="5dp"
                     android:textAlignment="center"
                     android:lineSpacingExtra="-10dp"
                     android:id="@+id/textView_titlename" />
