--- a/app/src/main/res/layout/newsdescriptiontamil.xml
+++ b/app/src/main/res/layout/newsdescriptiontamil.xml
@@ -50,6 +50,7 @@
                     android:layout_marginTop="25dp"
                     android:textStyle="bold"
                     android:textSize="20sp"
+                    android:paddingBottom="5dp"
                     android:textAlignment="center"
                     android:lineSpacingExtra="-2dp"
                     android:id="@+id/textView_titlename" />
