--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,7 @@
     <color name="sourcelinkcolor">#EA5D4D</color>
     <color name="searchviewhintcolor">#999797</color>
     <color name="notificationcolor">#891703</color>
+    <color name="eventcolor">#B5FCFBFB</color>
 
     <color name="input_register">#888888</color>
     <color name="input_register_hint">#5e6266</color>
@@ -34,6 +35,9 @@
     <color name="theme11">#CC9C00</color>
     <color name="theme12">#00B09B</color>
     <color name="theme1button">#3096CF</color>
+    <color name="theme13">#ffffff</color>
+    <color name="gray">#e9e7e7</color>
+    <color name="theme14">#FFFAF6F6</color>
 
     <!-- dots inactive colors -->
     <color name="dot_dark_screen1">#d1395c</color>
