--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -37,6 +37,7 @@
     <color name="theme1button">#3096CF</color>
     <color name="theme13">#ffffff</color>
     <color name="gray">#e9e7e7</color>
+    <color name="grayback">#fffefe</color>
     <color name="theme14">#FFFAF6F6</color>
 
     <!-- dots inactive colors -->
