--- a/app/src/main/res/drawable/whiteback.xml
+++ b/app/src/main/res/drawable/whiteback.xml
@@ -1,6 +1,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#f7f4f4" />
+    <solid android:color="#efeded" />
     <stroke android:width="0dp"
         android:color="#f7f5f5" />
     <corners
