--- a/app/src/main/res/layout/eventsdesc.xml
+++ b/app/src/main/res/layout/eventsdesc.xml
@@ -39,7 +39,17 @@
         android:textAlignment="center"
         android:lineSpacingExtra="-10dp"
         android:id="@+id/textView_titlename" />
-
+    <TextView
+        android:layout_marginRight="12dp"
+        android:layout_marginLeft="12dp"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/white"
+        android:layout_marginTop="20dp"
+        android:textSize="14sp"
+        android:textAlignment="center"
+        android:layout_gravity="center"
+        android:id="@+id/text_org" />
 
     <RelativeLayout
         android:layout_marginTop="30dp"
