--- a/app/src/main/res/layout/photostoriesmultipleimagesshow.xml
+++ b/app/src/main/res/layout/photostoriesmultipleimagesshow.xml
@@ -3,6 +3,8 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:background="@drawable/citycenterbg"
     android:id="@+id/main_layout_explore"
+    android:focusableInTouchMode="true"
+    android:focusable="true"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent">
     <ScrollView
