--- a/app/src/main/res/layout/themeandlaguageselect.xml
+++ b/app/src/main/res/layout/themeandlaguageselect.xml
@@ -4,25 +4,32 @@
     android:background="@android:color/black"
     android:layout_height="match_parent">
     <LinearLayout
+        android:gravity="center"
         android:layout_marginTop="30dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="30dp"
         android:layout_marginRight="10dp"
+        android:minWidth="170dp"
         android:layout_width="wrap_content"
         android:orientation="vertical"
         android:layout_height="wrap_content">
         <RelativeLayout
+            android:layout_gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
                 android:id="@+id/text_lang"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
+                android:textAlignment="center"
                 android:layout_centerHorizontal="true"
                 android:textSize="12sp"
                 android:textColor="@android:color/white"
                 android:text="Choose your Language"
                 android:layout_height="wrap_content" />
             <RadioGroup
+                android:layout_marginLeft="15dp"
+                android:layout_gravity="center"
+                android:layout_centerHorizontal="true"
               android:layout_below="@+id/text_lang"
                 android:id="@+id/radiogroup"
                 android:layout_width="match_parent"
@@ -49,7 +56,7 @@
             </RadioGroup>
         </RelativeLayout>
         <RelativeLayout
-
+            android:layout_gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
@@ -63,6 +70,7 @@
 
         </RelativeLayout>
         <RelativeLayout
+            android:layout_centerHorizontal="true"
             android:layout_marginTop="10dp"
             android:layout_width="140dp"
             android:layout_height="wrap_content">
