--- a/app/src/main/res/layout/mainpageenglish.xml
+++ b/app/src/main/res/layout/mainpageenglish.xml
@@ -174,43 +174,211 @@
     </LinearLayout>
 
     <RelativeLayout
-        android:visibility="gone"
+        android:visibility="visible"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#aa000000"
         android:id="@+id/top_layout">
-<RelativeLayout
-    android:background="@android:color/black"
-    android:padding="25dp"
-    android:layout_centerVertical="true"
-    android:layout_centerHorizontal="true"
-    android:layout_centerInParent="true"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
-        <ImageView
-            android:id="@+id/ivInstruction"
+
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-           android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true"
-            android:layout_centerInParent="true"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="15dp"
+            android:layout_marginEnd="161dp"
+            android:background="@android:color/transparent"
+            android:padding="25dp"
+            android:id="@+id/relativeLayout">
+
+            <ImageView
+                android:id="@+id/ivInstruction"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="36dp"
+                android:clickable="false"
+                android:minHeight="60dp"
+                android:minWidth="60dp"
+                android:paddingLeft="20dip"
+                android:scaleType="center"
+                android:src="@mipmap/instructiondownblack" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:gravity="center_horizontal"
+                android:text="Click Here for audios &amp; videos"
+                android:textAlignment="center"
+                android:textColor="@android:color/white"
+                android:textSize="15dp"
+                android:paddingRight="40dp"
+
+               />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/relativeLayout"
+            android:layout_alignBottom="@+id/relativeLayout"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="56dp"
+            android:background="@android:color/transparent"
+            android:padding="25dp"
+            android:id="@+id/relativeLayout3">
+
+            <ImageView
+                android:id="@+id/ivInstruction1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/textView2"
+                android:layout_marginStart="14dp"
+                android:layout_marginTop="13dp"
+                android:clickable="false"
+                android:minHeight="60dp"
+                android:minWidth="60dp"
+                android:paddingLeft="20dip"
+                android:scaleType="center"
+                android:src="@mipmap/instructiondownblack" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:gravity="center_horizontal"
+                android:text="Click Here for Events"
+                android:textAlignment="center"
+                android:textColor="@android:color/white"
+                android:textSize="15dp"
+                android:id="@+id/textView2"
+                android:paddingLeft="20dp"
+                android:paddingRight="0dp"/>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/relativeLayout"
+            android:layout_alignParentEnd="true"
+            android:background="@android:color/transparent"
+            android:paddingRight="0dp"
+            android:paddingLeft="25dp"
+            android:paddingTop="25dp"
+            android:paddingBottom="25dp"
+            android:layout_marginStart="100dp"
+            android:id="@+id/relativeLayout5">
+
+            <ImageView
+                android:id="@+id/ivInstruction2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_below="@+id/textView3"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="13dp"
+                android:clickable="false"
+                android:minHeight="60dp"
+                android:minWidth="60dp"
+                android:paddingLeft="0dp"
+                android:scaleType="center"
+                android:src="@mipmap/instructiondownblack" />
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="142dp"
+                android:gravity="center_horizontal"
+                android:paddingBottom="10dp"
+                android:paddingLeft="20dp"
+                android:text="Click Here for Events"
+                android:textAlignment="center"
+                android:textColor="@android:color/white"
+                android:textSize="15dp" />
+        </RelativeLayout>
+
+
+        <ImageView
+            android:id="@+id/ivInstruction3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignEnd="@+id/relativeLayout3"
+            android:layout_alignParentTop="true"
+            android:layout_marginEnd="27dp"
+            android:layout_marginTop="111dp"
             android:clickable="false"
             android:minHeight="60dp"
             android:minWidth="60dp"
-            android:paddingLeft="20dip"
+            android:paddingLeft="0dp"
             android:scaleType="center"
-            android:src="@mipmap/swiperight" />
-<TextView
-    android:layout_below="@+id/ivInstruction"
-    android:text="Swipe Right for CITY NEWS"
-    android:textColor="@android:color/white"
-    android:textStyle="bold"
-    android:textSize="15dp"
-    android:textAlignment="center"
-    android:gravity="center_horizontal"
-    android:layout_centerHorizontal="true"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content" />
+            android:src="@mipmap/instructionupblack" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/textView5"
+            android:layout_alignBottom="@+id/textView5"
+            android:layout_alignEnd="@+id/ivInstruction3"
+            android:gravity="center_horizontal"
+            android:paddingBottom="0dp"
+            android:paddingLeft="0dp"
+            android:text="Click Here to select language"
+            android:textAlignment="center"
+            android:textColor="@android:color/white"
+            android:textSize="15dp" />
+
+        <ImageView
+            android:id="@+id/ivInstruction4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/ivInstruction3"
+            android:layout_alignTop="@+id/ivInstruction3"
+            android:layout_marginStart="38dp"
+            android:clickable="false"
+            android:minHeight="60dp"
+            android:minWidth="60dp"
+            android:paddingLeft="0dp"
+            android:scaleType="center"
+            android:src="@mipmap/instructionupblack" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/ivInstruction4"
+            android:layout_below="@+id/ivInstruction3"
+            android:gravity="center_horizontal"
+            android:paddingBottom="0dp"
+            android:paddingLeft="0dp"
+            android:text="Click Here to select color theme"
+            android:textAlignment="center"
+            android:textColor="@android:color/white"
+            android:textSize="15dp" />
+
+        <TextView
+            android:id="@+id/gotit"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/relativeLayout5"
+            android:layout_marginBottom="35dp"
+            android:layout_toStartOf="@+id/textView5"
+            android:gravity="center_horizontal"
+            android:padding="10dp"
+            android:background="@color/theme1button"
+            android:paddingLeft="0dp"
+            android:text="GOT IT"
+            android:textAlignment="center"
+            android:textColor="@android:color/white"
+            android:textSize="15dp" />
     </RelativeLayout>
-    </RelativeLayout>
+
 </RelativeLayout>
