detail page and notification

--- a/app/src/main/res/layout/mainpageenglish.xml
+++ b/app/src/main/res/layout/mainpageenglish.xml
@@ -174,7 +174,7 @@
     </LinearLayout>
 
     <RelativeLayout
-        android:visibility="visible"
+        android:visibility="invisible"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#aa000000"
