--- a/app/src/main/res/layout/entertainmentversiontwo.xml
+++ b/app/src/main/res/layout/entertainmentversiontwo.xml
@@ -100,10 +100,20 @@
                         <ImageButton
                             android:layout_width="wrap_content"
                             android:id="@+id/themebutton"
-                            android:src="@drawable/themenew"
+                            android:src="@drawable/themewhite"
                             android:layout_gravity="center_horizontal"
                             android:background="@drawable/buttonselector"
                             android:layout_height="wrap_content" />
+                        <ImageView
+
+                            android:id="@+id/fontbutton"
+                            android:layout_width="22dp"
+                            android:layout_height="22dp"
+                            android:scaleType="centerCrop"
+                            android:adjustViewBounds="true"
+                            android:layout_gravity="center_horizontal"
+                            android:background="@drawable/buttonselector"
+                            android:src="@drawable/blackplayfair" />
                     </LinearLayout>
                     <LinearLayout
                         android:visibility="gone"
