--- a/app/src/main/res/layout/horizontal_video_item.xml
+++ b/app/src/main/res/layout/horizontal_video_item.xml
@@ -4,6 +4,7 @@
     android:id="@+id/click"
     android:layout_marginRight="10dp"
     android:background="@color/whitegradient"
+    android:paddingBottom="5dp"
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
@@ -18,6 +19,8 @@
         android:id="@+id/title"
         android:textAlignment="center"
         android:maxLines="2"
+        android:layout_marginLeft="3dp"
+        android:layout_marginRight="2dp"
         android:textColor="@android:color/white"
         android:layout_width="230dp"
 
