--- a/app/src/main/res/layout/frag_settings.xml
+++ b/app/src/main/res/layout/frag_settings.xml
@@ -1,6 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-    android:background="@drawable/citycenterbg"
+    android:background="@android:color/black"
+    android:id="@+id/version_main_layout"
     xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_height="wrap_content">
 
