--- a/app/src/main/res/layout/horizontal_photo_item.xml
+++ b/app/src/main/res/layout/horizontal_photo_item.xml
@@ -9,15 +9,17 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/image"
-        app:civ_border_color="@color/whitegradient"
-        app:civ_border_width="3dp"
-        android:layout_width="150dp"
-        android:layout_height="150dp" />
+        app:civ_border_color="#CCCCCC"
+        app:civ_border_width="1dp"
+        android:layout_width="160dp"
+        android:layout_height="160dp" />
     <TextView
+        android:layout_marginTop="4dp"
         android:textAlignment="center"
         android:maxLines="2"
+        android:textSize="18dp"
         android:id="@+id/title"
         android:textColor="@android:color/white"
-        android:layout_width="150dp"
+        android:layout_width="160dp"
         android:layout_height="wrap_content" />
 </LinearLayout>
