--- a/app/src/main/res/layout/horizontal_vertical_recyclerview.xml
+++ b/app/src/main/res/layout/horizontal_vertical_recyclerview.xml
@@ -2,8 +2,6 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="@color/whitegradient"
-    android:layout_marginBottom="5dp"
     android:layout_height="wrap_content">
     <RelativeLayout
         android:id="@+id/textlayout_textview"
@@ -15,6 +13,7 @@
             android:background="@color/whitegradient"
             android:textColor="@android:color/white"
             android:layout_width="match_parent"
+            android:textSize="21dp"
             android:paddingLeft="15dp"
             android:layout_height="wrap_content" />
         <android.support.v7.widget.RecyclerView
@@ -27,9 +26,10 @@
         </android.support.v7.widget.RecyclerView>
         <TextView
             android:layout_marginTop="10dp"
-            android:padding="10dp"
+            android:padding="6dp"
             android:background="@color/whitegradient"
             android:paddingBottom="10dp"
+            android:textSize="14dp"
             android:layout_below="@+id/horizontal_recylerview"
             android:id="@+id/seeall_horizontal"
             android:textColor="@android:color/white"
