--- a/app/src/main/res/layout/horizontal_video_item.xml
+++ b/app/src/main/res/layout/horizontal_video_item.xml
@@ -3,8 +3,8 @@
     android:orientation="vertical"
     android:id="@+id/click"
     android:layout_marginRight="10dp"
-    android:background="@color/whitegradient"
     android:paddingBottom="5dp"
+
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
@@ -12,17 +12,27 @@
         android:id="@+id/image"
         android:scaleType="centerCrop"
         android:adjustViewBounds="true"
-        android:layout_width="230dp"
+        android:layout_width="250dp"
 
-        android:layout_height="150dp" />
+        android:layout_height="185dp" />
     <TextView
         android:id="@+id/title"
-        android:textAlignment="center"
+
         android:maxLines="2"
-        android:layout_marginLeft="3dp"
+        android:layout_marginTop="5dp"
         android:layout_marginRight="2dp"
         android:textColor="@android:color/white"
-        android:layout_width="230dp"
+        android:layout_width="250dp"
 
+        android:textSize="18dp"
+        android:layout_height="wrap_content" />
+    <TextView
+
+        android:id="@+id/date"
+        android:textSize="11dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="2dp"
+        android:textColor="@android:color/white"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 </LinearLayout>
