--- a/app/src/main/res/layout/horizontalnew_item_normal.xml
+++ b/app/src/main/res/layout/horizontalnew_item_normal.xml
@@ -1,6 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:paddingBottom="5dp"
     android:id="@+id/listlayout_taball"
 
     >
@@ -126,7 +127,7 @@
                         />
                     <TextView
                         android:layout_marginRight="10dp"
-                        android:layout_marginTop="7dp"
+                        android:layout_marginTop="5dp"
                         android:maxLines="3"
                         android:lineSpacingExtra="5dp"
                         android:ellipsize="end"
@@ -140,7 +141,7 @@
                         />
                 </LinearLayout>
                 <LinearLayout
-                    android:layout_marginTop="7dp"
+                    android:layout_marginTop="9dp"
 
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
@@ -222,23 +223,21 @@
                 </RelativeLayout>
 
                 <RelativeLayout
-
                     android:layout_marginTop="10dp"
                     android:layout_width="match_parent"
-                    android:paddingBottom="15dp"
                     android:minHeight="2dp"
                     android:layout_height="wrap_content">
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="5dp"
                         android:id="@+id/line_separter"
-                        android:background="@color/whitefood"/>
+                        android:background="@android:color/transparent"/>
                 </RelativeLayout>
 
 
                 <TableLayout
                     android:visibility="gone"
-                    android:layout_marginTop="3dp"
+                    android:layout_marginTop="5dp"
 
                     android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content"    android:focusable="true" android:focusableInTouchMode="true" >
                     <TableRow   android:layout_width="match_parent"
