--- a/app/src/main/res/layout/mainactivityversiontwo.xml
+++ b/app/src/main/res/layout/mainactivityversiontwo.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:background="@drawable/citycenterbg"
+    android:background="@android:color/black"
     android:id="@+id/version_main_layout"
     android:focusable="true"
     android:focusableInTouchMode="true"
