--- a/app/src/main/res/layout/mainpageenglish.xml
+++ b/app/src/main/res/layout/mainpageenglish.xml
@@ -75,7 +75,7 @@
             android:layout_width="0dp"
             android:layout_weight="1"
 
-
+            android:textSize="12dp"
             android:layout_height="42dp"
             android:layout_centerInParent="true"/>
 
@@ -86,6 +86,7 @@
         android:textAllCaps="false"
         android:background="@android:color/transparent"
         android:text="Events"
+        android:textSize="12dp"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="42dp"
@@ -108,6 +109,7 @@
             android:textAllCaps="false"
             android:background="@android:color/transparent"
             android:text="Specials"
+            android:textSize="12dp"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="42dp"
@@ -120,6 +122,7 @@
                 android:textAllCaps="false"
                 android:background="@android:color/transparent"
                 android:text="Shop"
+                android:textSize="12dp"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="42dp"
