font change without reload

--- a/app/src/main/res/layout/entertainmentversiontwo.xml
+++ b/app/src/main/res/layout/entertainmentversiontwo.xml
@@ -98,17 +98,27 @@
                             android:textSize="12dp"
                             android:layout_height="wrap_content" />
                         <ImageButton
-                            android:layout_width="wrap_content"
+                            android:layout_width="18dp"
+                            android:scaleType="centerCrop"
                             android:id="@+id/themebutton"
                             android:src="@drawable/themewhite"
                             android:layout_gravity="center_horizontal"
                             android:background="@drawable/buttonselector"
-                            android:layout_height="wrap_content" />
+                            android:layout_height="18dp" />
+                        <TextView
+
+                            android:id="@+id/linevertical_versiontwo"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:textAlignment="center"
+                            android:textColor="@android:color/white"
+                            android:textSize="12dp" />
                         <ImageView
 
                             android:id="@+id/fontbutton"
-                            android:layout_width="22dp"
-                            android:layout_height="22dp"
+                            android:layout_width="16dp"
+                            android:layout_height="16dp"
                             android:scaleType="centerCrop"
                             android:adjustViewBounds="true"
                             android:layout_gravity="center_horizontal"
