--- a/app/src/main/res/layout/mainactivityversiontwo.xml
+++ b/app/src/main/res/layout/mainactivityversiontwo.xml
@@ -102,18 +102,28 @@
                             android:textSize="12dp" />
 
                         <ImageButton
-                            android:layout_marginBottom="5dp"
+                            android:layout_marginBottom="3dp"
                             android:id="@+id/themebutton"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="18dp"
+                            android:layout_height="18dp"
+                            android:scaleType="centerCrop"
                             android:layout_gravity="center_horizontal"
                             android:background="@drawable/buttonselector"
                             android:src="@drawable/themenormal" />
+                        <TextView
+
+                            android:id="@+id/linevertical_versiontwo"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:textAlignment="center"
+                            android:textColor="@android:color/white"
+                            android:textSize="12dp" />
                         <ImageView
 
                             android:id="@+id/fontbutton"
-                            android:layout_width="22dp"
-                            android:layout_height="22dp"
+                            android:layout_width="16dp"
+                            android:layout_height="16dp"
                             android:scaleType="centerCrop"
                             android:adjustViewBounds="true"
                             android:layout_gravity="center_horizontal"
