--- a/app/src/main/res/layout/mainpageenglish.xml
+++ b/app/src/main/res/layout/mainpageenglish.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/mainenglish"
     android:background="@android:color/black"
     android:focusable="true"
     android:focusableInTouchMode="true"
@@ -44,6 +45,7 @@
     </RelativeLayout>
 
     <LinearLayout
+
         android:layout_width="wrap_content"
         android:layout_height="60dp"
         android:layout_marginBottom="0dp"
