--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,7 +20,7 @@
 <color name="textfade">#CCCCCC</color>
     <color name="input_register">#888888</color>
     <color name="input_register_hint">#5e6266</color>
-
+    <color name="whitecolor">#ffffff</color>
 
     <color name="theme1">#383838</color>
     <color name="theme2">#59247c</color>
