--- a/app/src/main/res/layout/entertainmentnewtamil.xml
+++ b/app/src/main/res/layout/entertainmentnewtamil.xml
@@ -101,10 +101,20 @@
 
                             android:layout_width="wrap_content"
                             android:id="@+id/themebutton"
-                            android:src="@drawable/themenew"
+                            android:src="@drawable/themenormal"
                             android:layout_gravity="center_horizontal"
                             android:background="@drawable/buttonselector"
                             android:layout_height="wrap_content" />
+                        <ImageView
+
+                            android:id="@+id/fontbutton"
+                            android:layout_width="22dp"
+                            android:layout_height="22dp"
+                            android:scaleType="centerCrop"
+                            android:adjustViewBounds="true"
+                            android:layout_gravity="center_horizontal"
+                            android:background="@drawable/buttonselector"
+                            android:src="@mipmap/playfairblack" />
                     </LinearLayout>
                     <LinearLayout
                         android:visibility="gone"
