--- a/app/src/main/res/layout/mainpagetamil.xml
+++ b/app/src/main/res/layout/mainpagetamil.xml
@@ -97,14 +97,34 @@
                             android:textSize="12dp"
                             android:layout_height="wrap_content" />
                         <ImageButton
-                            android:layout_gravity="center_horizontal"
-
-                            android:layout_width="wrap_content"
+                            android:layout_marginBottom="3dp"
                             android:id="@+id/themebutton"
-                            android:src="@drawable/themenew"
-
+                            android:layout_width="18dp"
+                            android:layout_height="18dp"
+                            android:scaleType="centerCrop"
+                            android:layout_gravity="center_horizontal"
                             android:background="@drawable/buttonselector"
-                            android:layout_height="wrap_content" />
+                            android:src="@drawable/themenormal"
+                            />
+                        <TextView
+
+                            android:id="@+id/linevertical_versiontwo"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:textAlignment="center"
+                            android:textColor="@android:color/white"
+                            android:textSize="12dp" />
+                        <ImageView
+
+                            android:id="@+id/fontbutton"
+                            android:layout_width="16dp"
+                            android:layout_height="16dp"
+                            android:scaleType="centerCrop"
+                            android:adjustViewBounds="true"
+                            android:layout_gravity="center_horizontal"
+                            android:background="@drawable/buttonselector"
+                            android:src="@mipmap/playfairblack" />
                     </LinearLayout>
                     <LinearLayout
                         android:visibility="gone"
