--- a/app/src/main/res/layout/location.xml
+++ b/app/src/main/res/layout/location.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginTop="160dp"
+        android:layout_marginTop="200dp"
         android:layout_marginRight="13dp"
         android:orientation="vertical">
 
@@ -38,7 +38,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="0dp"
         android:layout_marginRight="50dp"
         android:layout_marginLeft="50dp"
         android:orientation="vertical"
@@ -62,10 +62,11 @@
         android:textSize="19dp" />
         <Button
             android:id="@+id/btn_coimbatore"
-            android:layout_width="wrap_content"
+            android:layout_width="40dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
-            android:background="@color/Black"/>
+            android:background="@mipmap/tick"
+            />
     </LinearLayout>
 
     <LinearLayout
