--- a/app/src/main/res/layout/location.xml
+++ b/app/src/main/res/layout/location.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/map">
 
     <LinearLayout
+
+        android:id="@+id/start"
+        android:layout_centerInParent="true"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="200dp"
+        android:layout_height="wrap_content"
+
         android:layout_marginRight="13dp"
         android:orientation="vertical">
 
@@ -36,6 +39,7 @@
 
     </LinearLayout>
     <LinearLayout
+        android:layout_below="@id/start"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
@@ -125,8 +129,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/welcome_textview"
         android:layout_centerHorizontal="true"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="80dp"
+        android:layout_alignParentBottom="true"
         android:background="@android:color/transparent"
         android:src="@mipmap/forwardarrow" />
-</LinearLayout>
+</RelativeLayout>
