--- a/app/src/main/res/layout/language.xml
+++ b/app/src/main/res/layout/language.xml
@@ -70,7 +70,7 @@
             android:orientation="horizontal"
             android:layout_marginRight="50dp"
             android:layout_marginLeft="80dp"
-            android:background="@android:color/transparent"
+            android:background="#000000"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <TextView
