--- a/app/src/main/res/layout/mainpagetamilmain.xml
+++ b/app/src/main/res/layout/mainpagetamilmain.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:background="@android:color/black"
     android:focusable="true"
+    android:id="@+id/maintamil"
     android:focusableInTouchMode="true"
     tools:context=".MainPageEnglish">
     <RelativeLayout
@@ -42,132 +43,91 @@
         </RelativeLayout>
     </RelativeLayout>
 
+    <LinearLayout
 
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:layout_marginBottom="0dp"
+        android:layout_centerInParent="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true">
+
+        <ImageView android:id="@+id/btn_city_tamil"
+            android:src="@mipmap/cityfooterlogo"
+            android:background="@android:color/transparent"
+            android:scaleType="fitXY"
+            android:adjustViewBounds="true"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="72dp"
+            />
+    </LinearLayout>
     <LinearLayout android:id="@+id/footer"
         android:layout_width="match_parent"
-        android:layout_height="58dp"
-        android:orientation="horizontal"
-        android:background="#000000"
 
+        android:layout_height="42dp"
         android:layout_alignParentBottom="true">
-        <RelativeLayout
 
+        <Button android:id="@+id/btn_news_tamil"
+            android:textColor="@android:color/white"
+            android:textAllCaps="false"
+            android:background="@android:color/transparent"
+            android:text="News"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="fill_parent">
-            <ImageButton android:id="@+id/btn_versiontwocity"
 
-                android:layout_width="match_parent"
+            android:textSize="12dp"
+            android:layout_height="42dp"
+            android:layout_centerInParent="true"/>
 
-                android:layout_height="fill_parent"
-                android:src="@mipmap/newstamil"
-                android:background="@drawable/buttonselector"
-                android:layout_centerInParent="true"
 
-                />
-            <TextView
-                android:id="@+id/text_batchvalue_main_news"
-                android:layout_marginRight="10dp"
-                android:minWidth="20dp"
-                android:minHeight="20dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:visibility="gone"
-                android:layout_gravity="center"
-                android:layout_alignTop="@id/btn_versiontwocity"
-                android:layout_centerInParent="true"
-                android:layout_alignRight="@id/btn_versiontwocity"
-                android:background="@drawable/batgetext"
-                android:gravity="center"
-                android:shadowColor="@android:color/white"
-                android:shadowRadius="10.0"
-                android:textColor="@android:color/white"
-                android:textSize="10sp"/>
-        </RelativeLayout>
-        <RelativeLayout
 
+        <Button android:id="@+id/btn_events_tamil"
+            android:textColor="@android:color/white"
+            android:textAllCaps="false"
+            android:background="@android:color/transparent"
+            android:text="Events"
+            android:textSize="12dp"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="fill_parent">
-            <ImageButton android:id="@+id/btn_versiontwoexplore"
-                android:background="@drawable/buttonselector"
-                android:layout_width="match_parent"
-                android:layout_height="fill_parent"
-                android:src="@mipmap/specialtamil"
-                android:layout_centerInParent="true"
-                />
-            <TextView
-                android:id="@+id/text_batchvalue_main_specialstories"
-                android:minWidth="20dp"
-                android:minHeight="20dp"
-                android:layout_marginRight="10dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:visibility="gone"
-                android:layout_gravity="center"
-                android:layout_alignTop="@id/btn_versiontwoexplore"
-                android:layout_centerInParent="true"
-                android:layout_alignRight="@id/btn_versiontwoexplore"
-                android:background="@drawable/batgetext"
-                android:gravity="center"
-                android:shadowColor="@android:color/white"
-                android:shadowRadius="10.0"
-                android:textColor="@android:color/white"
-                android:textSize="10sp"/>
-        </RelativeLayout>
-        <RelativeLayout
+            android:layout_height="42dp"
+            android:layout_centerInParent="true" />
 
+
+
+
+        <ImageView
+            android:background="@android:color/transparent"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="fill_parent">
-            <ImageButton android:id="@+id/btn_versiontwobeyond"
-                android:layout_centerInParent="true"
-                android:background="@drawable/buttonselector"
-                android:layout_width="match_parent"
-                android:layout_height="fill_parent"
-
-                android:src="@mipmap/eventstamil"
-
-                />
-            <TextView
-                android:id="@+id/text_batchvalue_main_event"
-                android:minWidth="20dp"
-                android:minHeight="20dp"
-                android:layout_marginRight="10dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:visibility="gone"
-                android:layout_gravity="center"
-                android:layout_alignTop="@id/btn_versiontwobeyond"
-                android:layout_centerInParent="true"
-                android:layout_alignRight="@id/btn_versiontwobeyond"
-                android:background="@drawable/batgetext"
-                android:gravity="center"
-                android:shadowColor="@android:color/white"
-                android:shadowRadius="10.0"
-                android:textColor="@android:color/white"
-                android:textSize="10sp"/>
+            android:layout_height="45dp"
+            android:layout_centerInParent="true" />
 
 
-        </RelativeLayout>
 
-        <ImageButton android:id="@+id/btn_versiontwosearch"
-            android:background="@drawable/buttonselector"
+        <Button android:id="@+id/btn_specials_tamil"
+            android:textColor="@android:color/white"
+            android:textAllCaps="false"
+            android:background="@android:color/transparent"
+            android:text="Specials"
+            android:textSize="12dp"
             android:layout_width="0dp"
-            android:layout_height="fill_parent"
             android:layout_weight="1"
-            android:src="@mipmap/searchtamil"
-            android:gravity="center_horizontal" />
-
-
-        <ImageButton android:id="@+id/btn_versiontwonotifications"
-            android:layout_weight="1"
-            android:background="@drawable/buttonselector"
-            android:layout_width="0dp"
-            android:layout_height="fill_parent"
+            android:layout_height="42dp"
             android:layout_centerInParent="true"
-            android:src="@mipmap/moretamil"
-            android:gravity="center_horizontal"
+            />
+
+
+        <Button android:id="@+id/btn_shop_tamil"
+            android:textColor="@android:color/white"
+            android:textAllCaps="false"
+            android:background="@android:color/transparent"
+            android:text="Shop"
+            android:textSize="12dp"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="42dp"
+            android:layout_centerInParent="true"
 
             />
 
