--- a/app/src/main/res/layout/explore_mycart_view_frag.xml
+++ b/app/src/main/res/layout/explore_mycart_view_frag.xml
@@ -27,7 +27,7 @@
         android:id="@+id/swipe_shop_mycart">
         <android.support.v7.widget.RecyclerView
             android:layout_marginTop="25dp"
-
+            android:background="@android:color/transparent"
             android:id="@+id/recyclerview_shops"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
