--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="articlefooter">#EA5D4D</color>
     <color name="Black">#FF000000</color>
     <color name="white">#f2f2f2</color>
+    <color name="Whitecolor">#FFFFFF</color>
     <color name="whitegradient">#0fffffff</color>
     <color name="whitefood">#14ffffff</color>
     <color name="whiteevent">#1effffff</color>
