--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,7 +28,7 @@
         <item name="android:windowAnimationStyle">@null</item>
         <item name="android:background">@drawable/spinner_background</item>
     </style>
-    <style name="MY.DIALOG" parent="android:Theme" >
+    <style name="MY.DIALOG" parent="android:Theme.Translucent" >
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowFullscreen">true</item>
         <item name="android:windowIsFloating">false</item>
