--- a/app/src/main/res/layout/explore_companylist_activity.xml
+++ b/app/src/main/res/layout/explore_companylist_activity.xml
@@ -49,6 +49,8 @@
         </LinearLayout>
 
         <android.support.v4.widget.SwipeRefreshLayout
+            android:layout_marginTop="10dp"
+            android:paddingBottom="40dp"
             android:layout_below="@+id/footerline"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -88,52 +90,61 @@
         android:layout_alignParentBottom="true"
         android:layout_width="fill_parent"
         android:id="@+id/cart_layout"
-        android:layout_height="40dp"
+        android:minHeight="50dp"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:background="@android:color/white"
-
         android:layout_above="@+id/footer">
         <TextView
+            android:layout_marginTop="5dp"
             android:layout_width="wrap_content"
-            android:id="@+id/mycart_textview"
-            android:layout_gravity="end"
-            android:gravity="end|center|center_horizontal"
-
+            android:id="@+id/back_textview"
+            android:layout_gravity="start|center"
+            android:layout_marginLeft="10dp"
+            android:gravity="start|center|center_horizontal"
             android:textColor="@android:color/black"
-            android:text="MY CART"
+            android:text="Back"
             android:layout_weight=".33"
             android:layout_height="fill_parent" />
         <RelativeLayout
             android:gravity="center|center_horizontal"
             android:layout_centerInParent="true"
             android:layout_width="0dp"
-            android:layout_weight=".33"
+            android:layout_weight=".34"
             android:layout_height="match_parent">
             <TextView
+                android:layout_marginTop="8dp"
+                android:text="My Cart"
+                android:id="@+id/title_shop_mycartcount_textview"
+                android:textColor="@android:color/black"
+                android:textSize="15dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:layout_marginTop="2dp"
+                android:layout_toRightOf="@+id/title_shop_mycartcount_textview"
                 android:id="@+id/cart_main_count"
-                android:minWidth="25dp"
-
-                android:minHeight="25dp"
+                android:minWidth="24dp"
+                android:minHeight="22dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-
-                android:layout_centerInParent="true"
                 android:text="0"
                 android:background="@drawable/batgetext"
                 android:gravity="center"
                 android:shadowColor="@android:color/white"
                 android:shadowRadius="10.0"
                 android:textColor="@android:color/white"
-                android:textSize="10sp"/>
+                android:textSize="9sp"/>
         </RelativeLayout>
         <TextView
+            android:layout_marginTop="5dp"
             android:textColor="@android:color/black"
+            android:layout_marginRight="10dp"
             android:layout_width="wrap_content"
-            android:id="@+id/buynow_textview"
-            android:text="BUY NOW"
-            android:gravity="start|center|center_horizontal"
-            android:layout_gravity="left"
+            android:id="@+id/wishlist_textview"
+            android:text="Wish List"
+            android:gravity="end|center|center_horizontal"
+            android:layout_gravity="right|center"
             android:layout_weight=".33"
             android:layout_height="fill_parent" />
     </LinearLayout>
