--- a/app/src/main/res/layout/explore_feed_item_product_jewellery_item.xml
+++ b/app/src/main/res/layout/explore_feed_item_product_jewellery_item.xml
@@ -2,7 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_marginBottom="5dp"
-    android:background="@color/searchviewhintcolor"
+    android:background="@color/whitefood"
     android:layout_height="wrap_content">
     <com.android.volley.toolbox.NetworkImageView
         android:layout_width="match_parent"
@@ -13,16 +13,19 @@
         android:adjustViewBounds="true"
         android:maxHeight="150dp"/>
     <TextView
-        android:textSize="16sp"
+        android:textSize="20sp"
 
         android:textAlignment="center"
         android:layout_marginTop="5dp"
+        android:paddingBottom="5dp"
         android:id="@+id/text_product_jewel_title"
         android:layout_below="@+id/product_jewellery_image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <TextView
-        android:textSize="16sp"
+        android:paddingBottom="3dp"
+        android:visibility="gone"
+        android:textSize="18sp"
         android:textAlignment="center"
         android:layout_marginTop="5dp"
         android:id="@+id/text_product_jewel_price"
