--- a/app/src/main/res/layout/explore_mycart_feed.xml
+++ b/app/src/main/res/layout/explore_mycart_feed.xml
@@ -2,6 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:background="@android:color/transparent"
     android:layout_marginBottom="5dp"
     android:layout_height="wrap_content">
     <LinearLayout
@@ -35,13 +36,8 @@
                     android:textSize="14sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
-                <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
 
-                android:background="@android:color/transparent">
                 <Spinner
-                    style="@style/Widget.AppCompat.DropDownItem.Spinner"
                     android:layout_marginTop="2dp"
                     android:layout_marginLeft="5dp"
                     android:id="@+id/spin_product_price_list"
@@ -49,7 +45,7 @@
                     android:layout_height="35dp">
 
                 </Spinner>
-                </RelativeLayout>
+
                 <TextView
                     android:layout_marginTop="5dp"
                     android:layout_marginLeft="5dp"
@@ -85,12 +81,12 @@
 
                     android:paddingTop="5dp"
                     android:paddingBottom="5dp"
-                    android:paddingLeft="25dp"
-                    android:paddingRight="25dp"
+                    android:paddingLeft="24dp"
+                    android:paddingRight="24dp"
                     android:background="@color/searchviewhintcolor"
                     android:layout_marginTop="4dp"
                     android:layout_gravity="center"
-                    android:text="+"
+
                     android:textSize="13sp"
                     android:id="@+id/text_product_addtocart_count"
                     android:layout_width="wrap_content"
