--- a/app/src/main/res/layout/explore_mycart_view_frag.xml
+++ b/app/src/main/res/layout/explore_mycart_view_frag.xml
@@ -21,7 +21,7 @@
 
     <android.support.v4.widget.SwipeRefreshLayout
 
-
+        android:paddingBottom="40dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/swipe_shop_mycart">
@@ -45,27 +45,46 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <LinearLayout
+        android:id="@+id/cart_layout"
         android:orientation="vertical"
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:layout_height="60dp">
+        <LinearLayout
+            android:background="@color/searchviewhintcolor"
+            android:padding="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/total_cartcount_back"
+                android:layout_gravity="left"
+                android:layout_marginLeft="10dp"
+                android:textAlignment="center"
+                android:textSize="14dp"
+                android:layout_weight=".33"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" />
         <TextView
             android:id="@+id/total_cartcount_price_shop"
-            android:background="@color/searchviewhintcolor"
-            android:padding="5dp"
+            android:layout_gravity="center"
+
             android:textAlignment="center"
             android:textSize="14dp"
-            android:layout_width="match_parent"
+            android:layout_weight=".33"
+            android:layout_width="0dp"
             android:layout_height="wrap_content" />
-        <TextView
-            android:layout_marginTop="4dp"
-            android:id="@+id/add_more_products_shop"
-            android:background="@color/searchviewhintcolor"
-            android:padding="5dp"
-            android:textAlignment="center"
-            android:textSize="14dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/total_cartcount_checkout"
+
+                android:layout_gravity="right"
+                android:layout_marginRight="4dp"
+                android:textAlignment="center"
+                android:textSize="14dp"
+                android:layout_weight=".33"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
     </LinearLayout>
 
 </RelativeLayout>
