--- a/app/src/main/res/layout/explore_product_detail_activity.xml
+++ b/app/src/main/res/layout/explore_product_detail_activity.xml
@@ -331,6 +331,7 @@
             </RelativeLayout>
 
 <LinearLayout
+    android:paddingBottom="10dp"
 android:layout_gravity="bottom"
     android:layout_marginTop="10dp"
     android:orientation="horizontal"
@@ -356,4 +357,66 @@ android:layout_gravity="bottom"
         </LinearLayout>
         </ScrollView>
     </RelativeLayout>
+    <LinearLayout
+        android:layout_alignParentBottom="true"
+        android:layout_width="fill_parent"
+        android:id="@+id/cart_layout"
+        android:minHeight="50dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_above="@+id/footer">
+        <TextView
+            android:layout_marginTop="5dp"
+            android:layout_width="wrap_content"
+            android:id="@+id/back_textview"
+            android:layout_gravity="start|center"
+            android:layout_marginLeft="10dp"
+            android:gravity="start|center|center_horizontal"
+            android:textColor="@android:color/black"
+            android:text="Back"
+            android:layout_weight=".33"
+            android:layout_height="fill_parent" />
+        <RelativeLayout
+            android:gravity="center|center_horizontal"
+            android:layout_centerInParent="true"
+            android:layout_width="0dp"
+            android:layout_weight=".34"
+            android:layout_height="match_parent">
+            <TextView
+                android:layout_marginTop="8dp"
+                android:text="My Cart"
+                android:id="@+id/title_shop_mycartcount_textview"
+                android:textColor="@android:color/black"
+                android:textSize="15dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:layout_marginTop="2dp"
+                android:layout_toRightOf="@+id/title_shop_mycartcount_textview"
+                android:id="@+id/cart_main_count"
+                android:minWidth="24dp"
+                android:minHeight="22dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="0"
+                android:background="@drawable/batgetext"
+                android:gravity="center"
+                android:shadowColor="@android:color/white"
+                android:shadowRadius="10.0"
+                android:textColor="@android:color/white"
+                android:textSize="9sp"/>
+        </RelativeLayout>
+        <TextView
+            android:layout_marginTop="5dp"
+            android:textColor="@android:color/black"
+            android:layout_marginRight="10dp"
+            android:layout_width="wrap_content"
+            android:id="@+id/wishlist_textview"
+            android:text="Wish List"
+            android:gravity="end|center|center_horizontal"
+            android:layout_gravity="right|center"
+            android:layout_weight=".33"
+            android:layout_height="fill_parent" />
+    </LinearLayout>
 </RelativeLayout>
