--- a/app/src/main/res/layout/explore_productlist_activity.xml
+++ b/app/src/main/res/layout/explore_productlist_activity.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="@android:color/black"
+
     android:id="@+id/shop_layout"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent">
@@ -52,18 +52,24 @@
     android:id="@+id/filters"
     android:layout_marginTop="5dp"
     android:orientation="horizontal"
+    android:weightSum="1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <Spinner
         android:layout_marginTop="2dp"
         android:layout_marginLeft="5dp"
+        android:padding="2dp"
         android:id="@+id/spin_productlist_subcat"
         android:layout_width="0dp"
         android:layout_weight=".50"
         android:layout_height="35dp">
 
     </Spinner>
+
+
     <Spinner
+
+        android:padding="2dp"
         android:layout_marginTop="2dp"
         android:layout_marginLeft="5dp"
         android:id="@+id/spin_productlist_lowcat"
@@ -74,7 +80,8 @@
     </Spinner>
 </LinearLayout>
         <android.support.v4.widget.SwipeRefreshLayout
-            android:layout_marginTop="5dp"
+            android:paddingBottom="40dp"
+            android:layout_marginTop="10dp"
             android:layout_below="@+id/filters"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -110,5 +117,144 @@
             />
 
     </RelativeLayout>
+    <LinearLayout
+        android:layout_alignParentBottom="true"
+        android:layout_width="fill_parent"
+        android:id="@+id/cart_layout"
+        android:minHeight="50dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_above="@+id/footer">
+        <TextView
+            android:layout_marginTop="5dp"
+            android:layout_width="wrap_content"
+            android:id="@+id/back_textview"
+            android:layout_gravity="start|center"
+            android:layout_marginLeft="10dp"
+            android:gravity="start|center|center_horizontal"
+            android:textColor="@android:color/black"
+            android:text="Back"
+            android:layout_weight=".33"
+            android:layout_height="fill_parent" />
+        <RelativeLayout
+            android:gravity="center|center_horizontal"
+            android:layout_centerInParent="true"
+            android:layout_width="0dp"
+            android:layout_weight=".34"
+            android:layout_height="match_parent">
+            <TextView
+                android:layout_marginTop="8dp"
+                android:text="My Cart"
+                android:id="@+id/title_shop_mycartcount_textview"
+                android:textColor="@android:color/black"
+                android:textSize="15dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:layout_marginTop="2dp"
+                android:layout_toRightOf="@+id/title_shop_mycartcount_textview"
+                android:id="@+id/cart_main_count"
+                android:minWidth="24dp"
+                android:minHeight="22dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="0"
+                android:background="@drawable/batgetext"
+                android:gravity="center"
+                android:shadowColor="@android:color/white"
+                android:shadowRadius="10.0"
+                android:textColor="@android:color/white"
+                android:textSize="9sp"/>
+        </RelativeLayout>
+        <TextView
+            android:layout_marginTop="5dp"
+            android:textColor="@android:color/black"
+            android:layout_marginRight="10dp"
+            android:layout_width="wrap_content"
+            android:id="@+id/wishlist_textview"
+            android:text="Wish List"
+            android:gravity="end|center|center_horizontal"
+            android:layout_gravity="right|center"
+            android:layout_weight=".33"
+            android:layout_height="fill_parent" />
+    </LinearLayout>
+    <LinearLayout android:id="@+id/footer"
+        android:visibility="gone"
+        android:layout_width="fill_parent"
+        android:layout_height="62dp"
+        android:orientation="horizontal"
+        android:background="#FF000000"
 
+        android:layout_alignParentBottom="true">
+        <ImageButton android:id="@+id/btn_ex_back"
+            android:layout_marginRight="1dp"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:src="@mipmap/news"
+            android:background="@drawable/buttonselector"
+            android:gravity="center_horizontal"
+            android:layout_weight="1"
+            />
+
+        <ImageButton android:id="@+id/btn_ex_happening"
+            android:layout_margin="1dp"
+            android:background="@drawable/buttonselector"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:src="@mipmap/events"
+            android:gravity="center_horizontal"
+            />
+        <ImageButton android:id="@+id/btn_ex_search"
+            android:layout_margin="1dp"
+
+            android:background="@drawable/buttonselector"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:src="@mipmap/explore"
+            android:gravity="center_horizontal" />
+        <ImageButton android:id="@+id/btn_ex_entertainment"
+            android:layout_margin="1dp"
+            android:background="@drawable/buttonselector"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:src="@mipmap/specials"
+            android:gravity="center_horizontal"
+            />
+        <RelativeLayout
+            android:layout_centerInParent="true"
+            android:layout_width="wrap_content"
+            android:layout_weight="1"
+            android:layout_height="wrap_content">
+            <ImageButton android:id="@+id/btn_ex_more"
+                android:layout_margin="1dp"
+                android:background="@drawable/buttonselector"
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:layout_centerInParent="true"
+                android:src="@mipmap/more"
+                android:gravity="center_horizontal"
+                />
+            <TextView
+                android:id="@+id/text_batchvalue_main"
+                android:minWidth="20dp"
+                android:visibility="gone"
+                android:minHeight="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_alignTop="@id/btn_artcileprofile"
+                android:layout_centerInParent="true"
+                android:layout_alignRight="@id/btn_artcileprofile"
+                android:background="@drawable/batgetext"
+                android:gravity="center"
+                android:shadowColor="@android:color/white"
+                android:shadowRadius="10.0"
+                android:textColor="@android:color/white"
+                android:textSize="10sp"/>
+        </RelativeLayout>
+    </LinearLayout>
 </RelativeLayout>
