--- a/app/src/main/res/layout/explore_wishlist_feed.xml
+++ b/app/src/main/res/layout/explore_wishlist_feed.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_marginBottom="5dp"
+    android:background="@android:color/transparent"
     android:layout_height="wrap_content">
     <LinearLayout
         android:orientation="vertical"
@@ -35,21 +36,14 @@
                     android:textSize="14sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
 
-                    android:background="@android:color/transparent">
-                    <Spinner
-                        style="@style/Widget.AppCompat.DropDownItem.Spinner"
-                        android:layout_marginTop="2dp"
-                        android:layout_marginLeft="5dp"
-                        android:id="@+id/spin_product_price_list"
-                        android:layout_width="wrap_content"
-                        android:layout_height="35dp">
+                <Spinner
+                    android:layout_marginTop="2dp"
+                    android:layout_marginLeft="5dp"
+                    android:id="@+id/spin_product_price_list"
+                    android:layout_width="wrap_content"
+                    android:layout_height="35dp"/>
 
-                    </Spinner>
-                </RelativeLayout>
                 <TextView
                     android:layout_marginTop="5dp"
                     android:layout_marginLeft="5dp"
