--- a/app/src/main/res/layout/explore_wishlist_frag.xml
+++ b/app/src/main/res/layout/explore_wishlist_frag.xml
@@ -20,7 +20,7 @@
 
         <android.support.v4.widget.SwipeRefreshLayout
 
-
+            android:paddingBottom="40dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/swipe_mywishlist">
@@ -44,20 +44,46 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <LinearLayout
+        android:id="@+id/cart_layout"
         android:orientation="vertical"
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:layout_height="60dp">
-
-        <TextView
-            android:layout_marginTop="4dp"
-            android:id="@+id/gotocart_wishlist"
+        <LinearLayout
             android:background="@color/searchviewhintcolor"
             android:padding="5dp"
-            android:textAlignment="center"
-            android:textSize="14dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/wishlist_back"
+                android:layout_gravity="left"
+                android:layout_marginLeft="10dp"
+                android:textAlignment="center"
+                android:textSize="14dp"
+                android:layout_weight=".33"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/total_wishlist_price_shop"
+                android:layout_gravity="center"
+
+                android:textAlignment="center"
+                android:textSize="14dp"
+                android:layout_weight=".33"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/total_wishlist_checkout"
+
+                android:layout_gravity="right"
+                android:layout_marginRight="4dp"
+                android:textAlignment="center"
+                android:textSize="14dp"
+                android:layout_weight=".33"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
     </LinearLayout>
 
 </RelativeLayout>
